<resources>
    <string name="app_name">CalenderTwo</string>

    <string name="date_title">%d年%d月</string>
    <string name="sunday">日</string>
    <string name="monday">一</string>
    <string name="tuesday">二</string>
    <string name="wednesday">三</string>
    <string name="thursday">四</string>
    <string name="friday">五</string>
    <string name="saturday">六</string>

    <string name="today">今天&#160;&#160;&#8201;农历&#160;&#160;&#8201;%1$s%2$s</string>
    <string name="day_before">%d天前&#160;&#160;&#8201;农历&#160;&#160;&#8201;%s%s</string>
    <string name="day_after">%d天后&#160;&#160;&#8201;农历&#160;&#160;&#8201;%s%s</string>

    <string name="new_building_activity">新建活动</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">标题</string>
    <string name="all_day">全天</string>
    <string name="begin">开始</string>
    <string name="end">结束</string>

    <string name="intent_time">time</string>
    <string name="time_set_time">%d年%d月%d日 周%s</string>
    <string name="new_building_time">%d年%d月%d日 %s:%s</string>
    <string name="new_building_hour_minute">%1$s:%2$s</string>
    <string name="new_building_begin">begin</string>
    <string name="new_building_end">end</string>
    <string name="new_building_type">type</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>

    <string name="timeStamp">%d-%d-%d-%d-%d-00</string>

    <string name="bundle_plan">plan</string>
    <string name="bundle_hour">hour</string>
    <string name="bundle_minute">minute</string>
    <string name="sure">确定</string>
    <string name="month">月</string>
    <string name="week">周</string>
    <string name="main">main</string>
    <string name="memor">memor</string>
    <string name="today_menu">今天</string>
    <string name="no_memor">没有日程</string>
    <string name="warning">日程不能为空!</string>
</resources>
