<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context="com.example.m.calendertwo.MainActivity"
            android:orientation="vertical">
            <android.support.v7.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/main_tool_bar"
                android:background="@color/back_color">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="@dimen/title_size"
                    android:gravity="center"
                    android:id="@+id/main_now_month"/>
            </android.support.v7.widget.Toolbar>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray_line" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:background="@color/back_color">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/sunday"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/monday"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/tuesday"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/wednesday"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/thursday"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/friday"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/saturday"
                    />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray_line"/>
            <android.support.v4.view.ViewPager
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/main_viewpager"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical"
            android:background="@color/back_color">
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray_line"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/selector_plus"
                    android:drawablePadding="2dp"
                    android:padding="3dp"
                    android:gravity="center"
                    android:textSize="@dimen/bottom_text_size"
                    android:text="@string/new_building_activity"
                    android:textColor="@drawable/bottom_text"
                    android:clickable="true"
                    android:id="@+id/main_new_building_text"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"

                    android:layout_weight="1"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

</layout>
