<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.m.calendertwo.NewBuildingActivity"
    android:orientation="vertical">
    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/new_building_toolbar"
        android:background="@color/back_color">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_building_activity"
            android:gravity="center"
            android:textSize="@dimen/title_size"
            android:textColor="@color/black"/>
    </android.support.v7.widget.Toolbar>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@android:dimen/app_icon_size"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="35dp"
        android:background="@color/white">

        <ImageView
            android:id="@+id/new_building_title_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/newbuilding_padding_left"
            android:layout_marginRight="4dp"
            android:clickable="true"
            android:src="@drawable/selector_plus_circle" />

        <EditText
            android:id="@+id/new_building_title_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:hint="@string/title" />

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray_line" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="32dp"
        android:background="@color/gray_line" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@android:dimen/app_icon_size"
        android:background="@color/white">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/title_size"
            android:layout_centerVertical="true"
            android:text="@string/all_day"
            android:textColor="@color/black"
            android:paddingLeft="@dimen/newbuilding_padding_left" />
        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:track="@drawable/selector_track"
            android:switchMinWidth="@dimen/switch_width"
            android:layout_marginRight="@dimen/newbuilding_padding_left"
            android:thumbTint="@color/white"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray_line" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@android:dimen/app_icon_size"
        android:background="@color/white"
        android:id="@+id/new_building_begin_layout">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/title_size"
            android:layout_centerVertical="true"
            android:text="@string/begin"
            android:textColor="@color/black"
            android:paddingLeft="@dimen/newbuilding_padding_left" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/right_icon"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/newbuilding_padding_left"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:paddingRight="@dimen/newbuilding_text_padding_right"
            android:id="@+id/new_building_begin_text"
            tools:text="2018年3月18日 00:00"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray_line" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@android:dimen/app_icon_size"
        android:background="@color/white"
        android:id="@+id/new_building_end_layout">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/title_size"
            android:layout_centerVertical="true"
            android:text="@string/end"
            android:textColor="@color/black"
            android:paddingLeft="@dimen/newbuilding_padding_left"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/right_icon"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/newbuilding_padding_left"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:paddingRight="@dimen/newbuilding_text_padding_right"
            android:id="@+id/new_building_end_text"
            tools:text="2018年3月18日 00:00"/>
    </RelativeLayout>


</LinearLayout>
